--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     "framework": "nextjs",
     "functions": {
         "api/**/*.py": {
-            "runtime": "python3.11"
+            "runtime": "@vercel/python"
         }
     },
     "rewrites": [
