Fix: Explicitly install Python requirements in Vercel build

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "buildCommand": "cd frontend && pnpm install && pnpm build",
     "outputDirectory": "frontend/.next",
     "devCommand": "cd frontend && pnpm dev",
-    "installCommand": "cd frontend && pnpm install",
+    "installCommand": "cd frontend && pnpm install && cd .. && pip install -r requirements.txt",
     "framework": "nextjs",
     "rewrites": [
         {
